--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
       <button class="main-nav__toggle" type="button" aria-label="Меню"></button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
-          <a class="main-nav__link" href="#place">О путешествии</a>
+          <a class="main-nav__link" href="#tours">О путешествии</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="#price">Цены</a>
