Проверка линтером, слайдер

--- a/source/index.html
+++ b/source/index.html
@@ -56,7 +56,7 @@
       </div>
       <ul class="catalog__list">
         <li class="catalog__item">
-          <a class="catalog__link" href="#greece" data-name="greece">
+          <a class="catalog__link" href="#greece">
             <figure class="catalog__figure">
               <picture>
                 <source type="image/webp" media="(max-width: 1023px)"
@@ -73,7 +73,7 @@
           </a>
         </li>
         <li class="catalog__item">
-          <a class="catalog__link" href="#albania" data-name="albania">
+          <a class="catalog__link" href="#albania">
             <figure class="catalog__figure">
               <picture>
                 <source type="image/webp" media="(max-width: 1023px)"
@@ -90,7 +90,7 @@
           </a>
         </li>
         <li class="catalog__item">
-          <a class="catalog__link" href="#macedonia" data-name="macedonia">
+          <a class="catalog__link" href="#macedonia">
             <figure class="catalog__figure">
               <picture>
                 <source type="image/webp" media="(max-width: 1023px)"
@@ -107,7 +107,7 @@
           </a>
         </li>
         <li class="catalog__item">
-          <a class="catalog__link" href="#montenegro" data-name="montenegro">
+          <a class="catalog__link" href="#montenegro">
             <figure class="catalog__figure">
               <picture>
                 <source type="image/webp" media="(max-width: 1023px)"
@@ -124,7 +124,7 @@
           </a>
         </li>
         <li class="catalog__item">
-          <a class="catalog__link" href="#croatia" data-name="croatia">
+          <a class="catalog__link" href="#croatia">
             <figure class="catalog__figure">
               <picture>
                 <source type="image/webp" media="(max-width: 1023px)"
@@ -147,23 +147,23 @@
         <h2 class="visually-hidden">Описание посещяемых мест и отзывы</h2>
         <ul class="places__nav" id="tours">
           <li class="places__nav-item">
-            <a class="places__nav-btn places__nav-btn--current" href="#greece" data-name="greece"> Греция</a>
+            <a class="places__nav-btn places__nav-btn--current" href="#greece"> Греция</a>
           </li>
           <li class="places__nav-item">
-            <a class="places__nav-btn" href="#albania" data-name="albania">Албания</a>
+            <a class="places__nav-btn" href="#albania">Албания</a>
           </li>
           <li class="places__nav-item">
-            <a class="places__nav-btn" href="#macedonia" data-name="macedonia">Македония</a>
+            <a class="places__nav-btn" href="#macedonia">Македония</a>
           </li>
           <li class="places__nav-item">
-            <a class="places__nav-btn" href="#montenegro" data-name="montenegro">Черногория</a>
+            <a class="places__nav-btn" href="#montenegro">Черногория</a>
           </li>
           <li class="places__nav-item">
-            <a class="places__nav-btn" href="#croatia" data-name="croatia">Хорватия</a>
+            <a class="places__nav-btn" href="#croatia">Хорватия</a>
           </li>
         </ul>
         <ul class="places__list">
-          <li class="places__item  places__item--current" id="greece" data-name="greece">
+          <li class="places__item  places__item--current" id="greece">
             <div class="description">
               <h3 class="description__title title">Греция</h3>
               <p class="description__text">На севере Греции находится один из крупнейших комплексов монастырей,
@@ -210,7 +210,7 @@
               </div>
             </div>
           </li>
-          <li class="places__item" id="albania" data-name="albania">
+          <li class="places__item" id="albania">
             <div class="description">
               <h3 class="description__title title">Албания</h3>
               <p class="description__text">В Албании мы посетим Курорт Ксамиль. Этот курорт поразит вас чистейшей водой
@@ -255,7 +255,7 @@
               </div>
             </div>
           </li>
-          <li class="places__item" id="macedonia" data-name="macedonia">
+          <li class="places__item" id="macedonia">
             <div class="description">
               <h3 class="description__title title">Македония</h3>
               <p class="description__text">В Македонии нашей целью будет посетить Палаошник, который расположился в
@@ -300,7 +300,7 @@
               </div>
             </div>
           </li>
-          <li class="places__item" id="montenegro" data-name="montenegro">
+          <li class="places__item" id="montenegro">
             <div class="description">
               <h3 class="description__title title">Черногория</h3>
               <p class="description__text">Черногория удивит нас самым большим в Европе каньоном реки Тара, который в
@@ -342,7 +342,7 @@
               </div>
             </div>
           </li>
-          <li class="places__item" id="croatia" data-name="croatia">
+          <li class="places__item" id="croatia">
             <div class="description">
               <h3 class="description__title title">Хорватия</h3>
               <p class="description__text">В Хорватии мы посетим необычайную пещеру названную Бередине. Ее подземный мир
